fix to inset of outcome trade on mobile + stubbed mixin for box-shadow

--- a/src/modules/app/less/colors.less
+++ b/src/modules/app/less/colors.less
@@ -37,6 +37,9 @@
 @color-black: #000000;
 @color-black-extra-light: lighten(@color-black, @amount-extra-light);
 
+@color-black: #000000;
+@color-black-extra-light: lighten(@color-black, @amount-extra-light);
+
 //	Specific
 @color-disabled: #b4b4b4;
 
