--- a/src/modules/outcomes/less/outcome.less
+++ b/src/modules/outcomes/less/outcome.less
@@ -2,6 +2,8 @@
 	.outcome-trade {
 		box-shadow: inset 0 5px 5px -5px @color-black-extra-light, inset  0 -5px 5px -5px @color-black-extra-light;
 		display: none;
+
+		box-shadow: inset 0 5px 5px -5px @color-black-extra-light, inset  0 -5px 5px -5px @color-black-extra-light;
 	}
 
 	&.selected {
